# cspdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  install_tech.py  mkdocs-pdf.yml  pyproject.toml  zensical.toml
.github/: CODEOWNERS  release-drafter.yml  write_cells_si220.py  write_cells_si220_cband.py  write_cells_si220_oband.py  write_cells_si500.py  write_cells_sin300.py  write_components_plot.py
.github/workflows/: claude-pr-review.yml  deploy-s3.yml  model_coverage.yml  pages.yml  release.yml  test_code.yml  test_coverage.yml  update_badges.yml
cspdk/: __init__.py  _schematic.py  base_cell.py  cells.py  import_pdk.py  layers.yaml  models.py  routing.py  tech.py  thermal_mzi_analysis.md
cspdk--sample-projects/basic/: pyproject.toml
cspdk--sample-projects/basic/mycspdk/: __init__.py
cspdk--sample-projects/basic/mycspdk/samples/: __init__.py  sample0.py
cspdk--sample-projects/basic/tests/: __init__.py  test_basic.py
cspdk--sample-projects/cspdk.si220--public--project/: .gitignore  README.md  pyproject.toml
cspdk/gds/: Heater.gds  Layer_Designations.gds  SOI220nm_1310nm_TE_STRIP_2x2_MMI.gds  SiN300nm_1310nm_TE_STRIP_2x1_MMI.gds  SiN300nm_1310nm_TE_STRIP_Grating.gds
cspdk/ge_on_si/: __init__.py  _schematic.py  cells.py  layers.yaml  tech.py
cspdk/klayout/: layers.lyp  tech.lyt
cspdk/model/: constraints.json
cspdk/samples/: circuit_simulations.py  circuit_simulations_with_routing.py  component_from_yaml.py  get_route.py  mode_solver.py  mode_solver_n.py  mode_solver_r.py  mode_solver_s.py
cspdk/si220/: __init__.py  cells.py  import_pdk.py  models.py  tech.py
cspdk/si220_cband/: containers.py  import_pdk.py  models.py  tech.py
cspdk/si220_oband/: __init__.py  import_pdk.py  models.py  tech.py
cspdk/si340/: __init__.py  _schematic.py  cells.py  layers.yaml  tech.py
cspdk/si500/: __init__.py  _schematic.py  cells.py  import_pdk.py  layers.yaml  models.py  tech.py
cspdk/si_sus/: __init__.py  _schematic.py  cells.py  layers.yaml  tech.py
cspdk/sin200/: __init__.py  _schematic.py  cells.py  layers.yaml  tech.py
cspdk/sin300/: __init__.py  _schematic.py  cells.py  import_pdk.py  layers.yaml  models.py  tech.py
docs/: _config.yml  _toc.yml  api.rst  cells.rst  cells_si220.rst  cells_si500.rst  cells_sin300.rst  zensical.toml
docs/notebooks/: meep_dc.ipynb  meep_mmi.ipynb  thermal_mzi_analysis.ipynb
references/: CORNERSTONE-GDSII-Template_All-Platforms_Jan_2024-1.gds  README.md  components.md
tests/: _schematic_checks.py  conftest.py  test_active_models.py  test_ge_on_si.py  test_material_coverage.py  test_netlists.py  test_netlists_si220.py  test_netlists_si500.py  test_netlists_sin300.py  test_pdk.py  test_pdk_si220.py  test_pdk_si500.py  test_pdk_sin300.py  test_routing.py  test_schematics_ge_on_si.py  test_schematics_si220_cband.py  test_schematics_si220_oband.py  test_schematics_si340.py  test_schematics_si500.py  test_schematics_si_sus.py  test_schematics_sin200.py  test_schematics_sin300.py  test_si220.py  test_si220_cband.py  test_si220_oband.py  test_si340.py  test_si500.py  test_si_sus.py  test_sin200.py  test_sin300.py
tests/gds_ref/: _bend.gds  _gc_rectangular.gds  _mm1x2_nitride_cband.gds  _mm2x2_nitride_cband.gds  _mmi1x2.gds  _mmi1x2_nitride_oband.gds  _mmi2x2.gds  _mmi2x2_nitride_oband.gds  _straight.gds  _taper.gds  array.gds  bend_euler.gds  bend_nc.gds  bend_nc.oas  bend_no.gds  bend_rc.gds  bend_rc.oas  bend_ro.gds  bend_ro.oas  bend_s.gds  bend_sc.gds  bend_sc.oas  bend_so.gds  bend_so.oas  coupler_sc.gds  coupler_so.gds  crossing_rc.oas  crossing_sc.gds  crossing_sc.oas  crossing_so.oas  die_nc.gds  die_no.gds  die_no.oas  die_rc.gds  die_rc.oas  die_ro.gds  die_ro.oas  die_sc.gds  die_so.gds  gc_rectangular.gds  (+55 more)
tests/gds_ref_ge_on_si/: array.gds  bend_euler.gds  bend_s.gds  rectangle.gds  straight.gds  taper.gds
tests/gds_ref_si220/: add_fiber_array.gds  add_fiber_array_sc.gds  add_fiber_array_so.gds  add_fiber_single.gds  add_fiber_single_sc.gds  add_fiber_single_so.gds  array.gds  bend_euler.gds  bend_euler_rc.gds  bend_euler_ro.gds  bend_euler_sc.gds  bend_euler_so.gds  bend_metal.gds  bend_rc.gds  bend_ro.gds  bend_s.gds  bend_s.oas  bend_s_metal.gds  bend_sc.gds  bend_so.gds  compass.gds  coupler.gds  coupler_rc.gds  coupler_rib.gds  coupler_ring.gds  coupler_ring_sc.gds  coupler_ring_so.gds  coupler_ro.gds  coupler_sc.gds  coupler_so.gds  coupler_straight.gds  coupler_strip.gds  coupler_symmetric.gds  crossing.gds  crossing_rc.gds  crossing_rib.gds  crossing_sc.gds  crossing_so.gds  die.gds  die_rc.gds  (+88 more)
tests/gds_ref_si220_oband/: add_fiber_array.gds  bend_euler.gds  bend_metal.gds  bend_s.gds  bend_s_metal.gds  compass.gds  coupler.gds  coupler_rib.gds  coupler_ring.gds  crossing.gds  crossing_rib.gds  die.gds  grating_coupler_elliptical.gds  grating_coupler_rectangular.gds  grating_coupler_rectangular_rib.gds  heater.gds  mmi1x2.gds  mmi1x2_rib.gds  mmi2x2.gds  mmi2x2_rib.gds  mzi.gds  pad.gds  rectangle.gds  ring_double.gds  ring_single.gds  spiral.gds  spiral_racetrack.gds  spiral_racetrack_heater.gds  straight.gds  straight_heater_meander.gds  straight_heater_metal.gds  straight_metal.gds  straight_rib.gds  straight_strip.gds  taper.gds  taper_metal.gds  text_rectangular.gds  text_rectangular_multi_layer.gds  trans_rib10.gds  trans_rib20.gds  (+4 more)
tests/gds_ref_si340/: array.gds  bend_euler_rc.gds  bend_euler_sc.gds  bend_euler_so.gds  bend_s.gds  compass.gds  coupler_rc.gds  coupler_sc.gds  coupler_so.gds  coupler_straight.gds  grating_coupler_array.gds  grating_coupler_elliptical_rc.gds  grating_coupler_elliptical_sc.gds  grating_coupler_elliptical_so.gds  grating_coupler_rectangular_rc.gds  grating_coupler_rectangular_sc.gds  grating_coupler_rectangular_so.gds  mmi1x2.gds  mmi1x2_rc.gds  mmi1x2_so.gds  mmi2x2.gds  mmi2x2_rc.gds  mmi2x2_so.gds  mzi_rc.gds  mzi_sc.gds  mzi_so.gds  pad.gds  rectangle.gds  straight_rc.gds  straight_sc.gds  straight_so.gds  taper.gds  taper_rc.gds  taper_so.gds  wire_corner.gds
tests/gds_ref_si500/: array.gds  bend_euler.gds  bend_rc.gds  (+38 more)
(+1384 files in other folders)
