# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [
  {name = "gdsfactory", email = "contact@gdsfactory.com"}
]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent"
]
dependencies = [
  "gdsfactory~=9.25.2",
  "gplugins[sax,tidy3d]~=2.0.0",
  "doroutes>=0.3.0"
]
description = "CornerStone PDK"
keywords = ["python"]
license = {file = "LICENSE"}
name = "cspdk"
readme = "README.md"
requires-python = ">=3.11,<3.14"
version = "1.4.0"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "jsondiff",
  "pytest",
  "pytest-cov",
  "pytest_regressions",
  "pytest-github-actions-annotate-failures",
  "gdsfactoryplus",
  "towncrier"
]
docs = ["jupytext", "matplotlib", "jupyter-book>=0.15.1,<1.1"]

[tool.codespell]
ignore-words-list = "te, te/tm, te, ba, fpr, fpr_spacing, ro, nd, donot, schem"

[tool.gdsfactoryplus]
name = "cspdk.si220.cband"

[tool.gdsfactoryplus.drc]
timeout = 300

[tool.gdsfactoryplus.pdk]
name = "cspdk.si220.cband"

[tool.gdsfactoryplus.sim.wls]
max = 1.6
min = 1.5
num = 1000

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true

[tool.pytest.ini_options]
# addopts = --tb=no
addopts = '--tb=short'
norecursedirs = ["extra/*.py"]
python_files = ["cspdk/*.py", "notebooks/*.ipynb", "tests/*.py"]
testpaths = ["cspdk/", "tests"]

[tool.ruff]
fix = true
ignore = [
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
  "C901",  # too complex
  "B905",  # `zip()` without an explicit `strict=` parameter
  "C408"  # C408 Unnecessary `dict` call (rewrite as a literal)
]
select = [
  "B",  # flake8-bugbear
  "C",  # flake8-comprehensions
  "D",  # pydocstyle
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "T10",  # flake8-debugger
  "UP",  # pyupgrade
  "W"  # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"cspdk/si220/cband/cells/__init__.py" = ["F403"]  # allowing star imports to aggregate cells
"cspdk/si220/cband/models/__init__.py" = ["F403"]  # allowing star imports to aggregate cells
"cspdk/si220/oband/cells/__init__.py" = ["F403"]  # allowing star imports to aggregate cells

[tool.ruff.pydocstyle]
convention = "google"

[tool.setuptools.package-data]
"*" = ["*.csv", "*.yaml", "*.yml", "*.gds", "*.lyp", "*.oas", "*.lyt", "*.dat", "*.nc", "*.svg", "*.GDS", "*.OAS"]

[tool.setuptools.packages]
find = {}

[tool.tbump]

[[tool.tbump.before_commit]]
cmd = "towncrier build --yes --version {new_version}"
name = "create & check changelog"

[[tool.tbump.file]]
src = "README.md"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "cspdk/__init__.py"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[tool.tbump.version]
current = "1.4.0"
# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.towncrier]
directory = ".changelog.d"
filename = "CHANGELOG.md"
issue_format = "[#{issue}](https://github.com/gdsfactory/cspdk/issues/{issue})"
package = "gdsfactory"
start_string = "<!-- towncrier release notes start -->\n"
template = ".changelog.d/changelog_template.jinja"
title_format = "## [{version}](https://github.com/gdsfactory/cspdk/releases/tag/v{version}) - {project_date}"
underlines = ["", "", ""]
