[build-system]
build-backend = "flit_core.buildapi"
requires = [ "flit_core >=3.2,<4" ]

[project]
authors = [{name = "gdsfactory", email = "contact@gdsfactory.com"}]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent"
]
dependencies = [
  "gdsfactory~=9.43.0",
  "gplugins[sax,femwell,tidy3d]~=2.1.0",
  "doroutes~=1.1.0"
]
description = "CornerStone PDK"
keywords = [ "python" ]
name = "cspdk"
readme = "README.md"
requires-python = ">=3.12,<3.15"
version = "1.4.3"

[[project.authors]]
name = "gdsfactory"
email = "contact@gdsfactory.com"

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [ "gdsfactoryplus", "jsondiff", "pre-commit", "pytest", "pytest-cov", "pytest-github-actions-annotate-failures", "pytest_regressions", "tbump", "towncrier" ]
docs = [ "jupyter", "mkdocs-material", "mkdocs-with-pdf", "nbconvert", "mkdocstrings[python]>=0.27.0", "zensical>=0.0.40,<0.1.0" ]

[tool.codespell]
ignore-words-list = "te, te/tm, te, ba, fpr, fpr_spacing, ro, nd, donot, schem"
skip = "references/*"

[tool.gdsfactoryplus]
name = "cspdk.si_sus"

[tool.gdsfactoryplus.drc]
timeout = 300

[tool.gdsfactoryplus.pdk]
name = "cspdk.si_sus"
options = [ "cspdk.si220.cband", "cspdk.si220.oband", "cspdk.si500", "cspdk.sin300", "cspdk.si340", "cspdk.si_sus", "cspdk.sin200", "cspdk.ge_on_si" ]

[tool.gdsfactoryplus.sim.wls]
max = 1.6
min = 1.5
num = 1000

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true

[tool.pytest.ini_options]
addopts = "--tb=short"
norecursedirs = [ "extra/*.py" ]
python_files = [ "cspdk/*.py", "notebooks/*.ipynb", "tests/*.py" ]
testpaths = [ "cspdk/", "tests" ]

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = [ "E501", "B008", "C901", "B905", "C408" ]
select = [ "B", "C", "D", "E", "F", "I", "T10", "UP", "W" ]

[tool.ruff.lint.per-file-ignores]
"cspdk/si220/cband/cells/__init__.py" = [ "F403" ]
"cspdk/si220/cband/models/__init__.py" = [ "F403" ]
"cspdk/si220/oband/cells/__init__.py" = [ "F403" ]
"references/**" = [ "ALL" ]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.package-data]
"*" = [ "*.csv", "*.yaml", "*.yml", "*.gds", "*.lyp", "*.oas", "*.lyt", "*.dat", "*.nc", "*.svg", "*.GDS", "*.OAS" ]

[tool.setuptools.packages.find]
[[tool.tbump.before_commit]]
cmd = "towncrier build --yes --version {new_version}"
name = "create & check changelog"

[[tool.tbump.file]]
src = "README.md"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "cspdk/__init__.py"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[tool.tbump.version]
current = "1.4.3"
regex = "  (?P<major>\\d+)\n  \\.\n  (?P<minor>\\d+)\n  \\.\n  (?P<patch>\\d+)\n  "

[tool.towncrier]
directory = ".changelog.d"
filename = "CHANGELOG.md"
issue_format = "[#{issue}](https://github.com/gdsfactory/cspdk/issues/{issue})"
package = "gdsfactory"
start_string = "<!-- towncrier release notes start -->\n"
template = ".changelog.d/changelog_template.jinja"
title_format = "## [{version}](https://github.com/gdsfactory/cspdk/releases/tag/v{version}) - {project_date}"
underlines = [ "", "", "" ]
