[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=68.0"]

[project]
name = "cspdk-sample-basic"
version = "0.1.0"
description = "Basic sample project for cspdk"
requires-python = ">=3.12"
dependencies = ["cspdk"]

[dependency-groups]
dev = ["gdsfactoryplus", "pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
